2015-01-04  Alexey Proskuryakov  <ap@apple.com>

        http/tests/security/cross-frame-access-put.html is racy
        https://bugs.webkit.org/show_bug.cgi?id=140059

        Reviewed by Darin Adler.

        This test used to run some code in a subframe on a zero delay timer, and some more
        code in a main frame in onload. The order was undefined.

        * http/tests/security/cross-frame-access-put-expected.txt:
        * http/tests/security/cross-frame-access-put.html:
        * http/tests/security/resources/cross-frame-iframe-for-put-test.html:

2015-01-04  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION: plugins/plugin-remove-readystatechange.html is failing on debug bots
        https://bugs.webkit.org/show_bug.cgi?id=126169

        Reviewed by Antti Koivisto.

        * plugins/plugin-remove-readystatechange.html: Move the embed so that it's not the
        last rendered element in the test. It's only a workaround, not a real fix - if
        anyone is interested in fixing the issue for real, please file a new bug.
        Also, demystified the test by using readyState instead of counting readystatechange
        events.

2015-01-03  Michael Saboff  <msaboff@apple.com>

        Crash in operationNewFunction when scrolling on Google+
        https://bugs.webkit.org/show_bug.cgi?id=140033

        Reviewed by Oliver Hunt.

        New regerssion test.

        * js/regress-140033-expected.txt: Added.
        * js/regress-140033.html: Added.
        * js/script-tests/regress-140033.js: Added.
        (.unused):
        (defineADeadFunction):

2015-01-02  Anders Carlsson  <andersca@apple.com>

        Get rid of storage tracker layout tests
        https://bugs.webkit.org/show_bug.cgi?id=140044

        Reviewed by Darin Adler.

        These tests are very flaky since they expect to be run in order. Furthermore, they were testing a WebKit Mac SPI